# advent_of_code

./: .gitignore  CMakeLists.txt  README.md  buildlib.sh  get.sh  gpt_python_print.py  out  runtime.sh
2023/day1/: Makefile  main  main.c  main.h  tester
2023/day2/: Makefile  main  main.c  tester
2023/day3/: Makefile  main  main.c  part2.c
2023/day4/: Makefile  main  main.c  part1.c
2023/day5/: Makefile  debug.gdb  main  main.c  main.h  tester
2023/day5/cpp/: Makefile  a  main.cpp  main.hpp  map.cpp  map.hpp  test  test.cpp
2023/day6/: Makefile  main  main.c  main.h  part1.c
2023/day7/: Makefile  main  main.c  main.h  part1.c  part1.h  part2.c  tester
2023/day8/: Makefile  a  day8.h  main  main.c
2023/lib/: linked_list.c  linked_list.h  main.h
2023/lib/tests/: Makefile  a  test.c
2024/: README.md
2024/day.1/: Makefile  main.cpp  part1.cpp  part2.cpp
2024/day.10/: part1.cpp  part2.cpp
2024/day.11/: compile_commands.json  main.cpp  part1.cpp  part2.cpp
2024/day.2/: part1.cpp  sample.txt
2024/day.3/: part1.cpp  part1.input
2024/day.5/: data.txt  main.cpp  part1.cpp  part2.cpp  rules.txt
2024/day.6/: main.cpp
2024/day.6/not_correct_but_kinda_cool/: tri_attempt.cpp
2024/day.7/: part1.cpp  part2.cpp
2024/day.8/: Makefile  main.cpp  part1.cpp  part2.cpp
2024/day.9/: main.cpp  part2.cpp
2024/day1/: Makefile  compile_commands.json  main.cpp
2024/day2/: Makefile  compile_commands.json  main.cpp
2024/day3/: filter_input.sh  main.cpp  part2.input
2024/day4/: Makefile  main.cpp  part1.cpp
2024/day5/: filter_input.sh  part1.cpp
2024/day6/: main.cpp  part2.cpp  test.txt
2024/day6/not_correct_but_kinda_cool/: backup.cpp
2024/day7/: Makefile  part2_v1.cpp
2024/day8/: part1.cpp
2024/day9/: incorrect  part1.cpp
leetcode/chalk/: Makefile  main  main.cpp
leetcode/chalk/solution1/: main.cpp
lib/: CMakeLists.txt  Makefile  compile_commands.json  tokenizer.cpp
lib/include/: definitions.hpp  graph_algs.hpp  hash.hpp  io.hpp  libapi.hpp  tokenizer.hpp
lib/src/: io.cpp
runtimes/: day.1  day.10  day.11  day.8  day2  day3  day4  day5  day6  day7  day8  day9
src/2015/01/: main.cpp
src/2015/02/: main.cpp
src/2015/03/: main.cpp
src/2015/04/: main.cpp
src/2015/05/: main.py
src/2015/06/: main.cpp
src/2015/07/: main.cpp  (+1 more)
(+12 files in other folders)
